# JLT-diffusers

./: .gitignore  LICENSE  README.md  denoiser.py  engine_jit.py  environment.yaml  latent_dataset.py  main_jit.py  model_jit.py  pyproject.toml  start.sh  start_latent_jit_16.sh  start_latent_jit_32.sh  start_latent_jit_32_async.sh  start_latent_v_32.sh  start_pixel_jit_16.sh  vae.py
examples/image_generation/: README.md  latent_dataset.py  parquet_dataset.py  train_jlt.py
scripts/: convert_diffusers_to_jlt.py  convert_jlt_to_diffusers.py  encode_latents.py  sample_jlt.py
src/diffusers/: __init__.py
src/diffusers/models/: __init__.py
src/diffusers/models/autoencoders/: __init__.py  vae_flux2.py
src/diffusers/models/transformers/: __init__.py  transformer_jlt.py
src/diffusers/pipelines/: __init__.py
src/diffusers/pipelines/jlt/: __init__.py  pipeline_jlt.py
src/diffusers/schedulers/: __init__.py  jlt_flow.py  scheduling_jlt.py
src/diffusers/utils/: __init__.py  flux2_latents.py
templates/: pipeline.py
util/: misc.py  model_util.py
