[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jlt-diffusers"
version = "0.1.0"
description = "JLT clean-latent diffusion with native diffusers integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "diffusers>=0.37.0",
    "accelerate>=0.33.0",
    "einops>=0.7.0",
    "safetensors>=0.4.0",
    "numpy>=1.22",
    "opencv-python>=4.8",
    "tqdm>=4.66",
]

[project.optional-dependencies]
train = ["wandb", "torch-fidelity", "datasets", "pyarrow"]
flash = ["flash-attn"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."
